Fix Header Spacing

--- a/src/components/header/HeaderStyles.css
+++ b/src/components/header/HeaderStyles.css
@@ -1,8 +1,8 @@
 .header {
   width: 100%;
-  height: 9%;
+  height: 7%;
   margin: 0 0 70px;
-  padding: 44px 0px 42px;
+  padding: 2% 0;
   box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
   background-image: linear-gradient(to bottom, #ececec -32%, #fff 124%);
 }
